# taipy-chess

./: MANIFEST.in  README.md  pyproject.toml
src/: main.py
src/chess_library/: library.py
src/chess_library/front-end/src/: index.ts
src/chess_library/front-end/src/ChessBoard/: ChessBoard.tsx
src/chess_library/front-end/src/HeatMap/: HeatMap.module.css  HeatMap.tsx
src/generate_heatmap/: board_heatmap_data.txt  first_knight_move_data.txt  first_move_data.txt  first_pawn_move_data.txt  main.py
src/pages/: board.md  board.py  games.md  openings.md  openings.py  stats.md  stats.py
