

[project]
name = "chess_library"
version = "1.0.0"
authors = [ { name = "KorieDrakeChaney" } ]
description = "For From Taipy with love Quest, a Chess project."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
keywords = [ "taipy" ]
license = { text = "MIT" }
dependencies = [ "taipy-gui>=3.1" ]